# aditi

./: .gitignore  .pypirc.template  .vale.ini  CHANGELOG.md  CLAUDE.md  CLAUDE.template.md  MANIFEST.in  PERFORMANCE_OPTIMIZATIONS.md  Presentation notes:.md  README-DEMOS.md  README.md  cassette.tape  implement-all-rules-as-nondet-first.txt  install-development-version-locally-using-pipx.txt  presentation-outline.md  prototype_demo.py  pyproject.toml  requirements-publish.txt  suggested-entityreference-fix.md  test_interruption.py  test_interruption_allowed.py  test_signal_handling.py  test_vale_integration.py  todo-today-2025-07-29.txt  todo.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  user_feedback.yml
.github/workflows/: github-pages.yml  update-claude-md.yml  update-commits.yml  validate-blog-posts.yml
archive/: rolfedh: Copyedit the current file.md
docs/: CLAUDE-MD-AUTOMATION.md  ENTITY_REFERENCE_HANDLING.md  Gemfile  QUICKSTART.md  _config.yml  about.md  cheatsheet.md  container-setup.md  design.md  index.md  known-issues.md  publishing.md
docs/_data/: recent_commits.yml
docs/_design/: aditi-claude-code-implementation.md  aditi-claude-code-todo-list.md  aditi-plan.md  container-setup-tasks.md  flatten-workflow.md  local-configuration-management.md  phase-1-next-steps.md  phase-2-completion-summary.md  phase-2-mockup-revised.md  phase-2-mockup.md  phase-2-next-steps.md  prompt-for-automation.md  remaining-work-to-complete.txt
docs/_posts/: 2025-01-27-i-finally-speak-a-programming-language.md  2025-01-27-implementing-phase-1-core-infrastructure.md  2025-01-27-minima-vs-just-the-docs.md  2025-01-27-organizing-blog-assets-with-claude.md  2025-01-27-setting-up-github-pages.md  2025-07-27-0723-i-finally-speak-a-programming-language.md  2025-07-27-0832-setting-up-github-pages.md  2025-07-27-0845-minima-vs-just-the-docs.md  2025-07-27-0848-organizing-blog-assets-with-claude.md  2025-07-27-1811-implementing-phase-1-core-infrastructure.md  2025-07-27-1811-implementing-vale-asciidocdita-container-integration.md  2025-07-27-2035-removing-git-integration-from-aditi-cli-design.md  2025-07-27-implementing-vale-asciidocdita-container-integration.md  2025-07-28-2030-running-vale-asciidocdita-directly-from-command-line.md  2025-07-28-2111-complete-asciidocdita-rule-coverage-implemented.md  2025-07-29-0607-fixing-jekyll-front-matter-standardization.md  2025-07-29-0638-claude-md-hybrid-automation-system.md  2025-07-29-0816-introducing-aditi-asciidoc-to-dita-migration-made-easy.md  2025-07-29-0959-example-workflow.md  2025-07-29-2021-improved-comment-flags-with-dynamic-vale-data.md  2025-07-29-2104-fixing-comment-flag-insertion-bug.md  2025-07-30-0528-implementing-journey-session-management.md  2025-07-30-0848-vhs-to-youtube-converter.md  post-template.md  (+8 more)
example-docs/: proc-setup.adoc  test-content-type.adoc  test-entity-reference.adoc
meta/: 2025-07-28-this-session-is-being-continued-from-a-previous-co.txt  PUBLISHING.md  Plan for Automating Aditi Rule Creation.md  README.md  READY_TO_PUBLISH.md  generate_rules_from_vale.py  plan-for-automation.txt  test_asciidocdita_rules.py  vale_rule_converter.py
scripts/: README.md  bump-version.py  claude_md_updater.py  create-issue.sh  install-git-hooks.sh  manage-git-hooks.sh  new-blog-post.sh  publish-to-pypi.sh  release.py  test-package-install.sh  upload-to-pypi.sh
test-check-issue/: test.adoc
tests/: README.md  __init__.py  conftest.py  test_blog_post_validation.py  test_claude_md_updater.py
vhs-cassettes/: convert-to-youtube.sh  demo-01-getting-started-v2.tape  demo-01-getting-started.tape  demo-02-interactive-journey.tape  demo-03-check-command.tape  demo-04-fix-command.tape  demo-05-vale-command.tape  demo-06-completion-command.tape
(+81 files in other folders)
